Adding TypeValidator function on Nbox
