# internal/domain/models/entry.go
@@ -6,10 +6,11 @@ import (
 )
 
 type Entry struct {
-	Path   string `json:"path,omitempty" swaggerignore:"true"`
-	Key    string `json:"key" example:"development/service/var-example"`
-	Value  string `json:"value" example:"value 123"`
-	Secure bool   `json:"secure" example:"false"`
+	Path              string `json:"path,omitempty" swaggerignore:"true"`
+	Key               string `json:"key" example:"development/service/var-example"`
+	Value             string `json:"value" example:"value 123"`
+	Secure            bool   `json:"secure" example:"false"`
+	TypeValidatorName string `json:"type_validator_name,omitempty" example:"json"`
 }
 
 func (e *Entry) String() string {
