# internal/domain/models/metadata.go
@@ -5,9 +5,10 @@ import (
 )
 
 type Metadata struct {
-	Hash      string    `json:"hash" dynamodbav:"Hash,omitempty"`
-	Secure    bool      `json:"secure" dynamodbav:"Secure"`
-	Action    string    `json:"action" dynamodbav:"Action,omitempty"`
-	UpdatedAt time.Time `json:"updatedAt" dynamodbav:"UpdatedAt,unixtime"`
-	UpdatedBy string    `json:"updatedBy" dynamodbav:"UpdatedBy,omitempty"`
+	Hash              string    `json:"hash" dynamodbav:"Hash,omitempty"`
+	Secure            bool      `json:"secure" dynamodbav:"Secure"`
+	Action            string    `json:"action" dynamodbav:"Action,omitempty"`
+	UpdatedAt         time.Time `json:"updatedAt" dynamodbav:"UpdatedAt,unixtime"`
+	UpdatedBy         string    `json:"updatedBy" dynamodbav:"UpdatedBy,omitempty"`
+	TypeValidatorName string    `json:"type_validator_name,omitempty" dynamodbav:"TypeValidatorName,omitempty"`
 }
